- 25: Enh. #1184: Executor now manages to establish even multi-dimensional
      arrays on first element assignment (though lazily filled) <2>
- 26: Bugfix #1186: Code export of C-Style variable initialisations to C++,
      C#, Java, and Javascript was defective (initialisation missing) <2>
- 26: Bugfix #1187: Analyser unduly decried C-style array declarations <2>
- 26: Bugfix #1188: Python export of C-style array declarations was wrong <2>
- 26: Bugfix #1189: Pascal, Oberon, and Python export of Java-style array
      declarations were defective (element type instead of variable name) <2> 

Version 3.32 (2021-09-19) requiring Java 11 or newer
- 01: Bugfix #851/2: SPECIAL-NAMES sections caused COBOL parser abort <2>
- 01: Bugfix #851/3: COBOL import flaws concerning floating-point literals <2>:
      - Decimal and float literals weren't recognised,
      - recognition / conversion of decimal commas implemented,
      - possible index range error during file preparation with fix format.
- 01: Bugfix #950: Synchronisation Arranger -> Arranger index went lost <2>
- 01: Bugfix #951: Import via source files dropping ignored import options <2>
- 02: Issue #954: STOP off button now disables rather removes breakpoints <2>
- 02: Bugfix #955: Several flaws on Java import with "class" literals, multi-
      catch clauses and try statements comprising several catch clauses. <2>
- 02: Issue #956: Java parsing ignored option "Import var declarations" <2>
- 02: Issue #957: "Processing" import now copes with import declarations <2>
- 02: Issue #958: Relative placing of special import/export option dialog <2>
- 02: Bugfix #959: Processing import now injects conversion functions and web
      colour literals in created diagram groups <2>
- 02: Issue #960: Processing import now declares standard system variables <2>
- 02: Bugfix #961: Java import did not detect/convert output instructions <2>
- 02: Bugfix #962: Constructor body import from Java sources often failed <2>